fix: header & footer alignments, removed tailwind colors, updated license

--- a/globals.css
+++ b/globals.css
@@ -1,15 +1,25 @@
 html.light {
   --primary: oklch(0.6039 0.228 269.1);
   --text-dark: inherit;
-  --badge-bg: oklch(0.6039 0.228 269.1);
-  --badge-text: oklch(1 0 0);
+  --text-content-dark: inherit;
+  --text-base-content: oklch(0.223899 0.031305 278.072);
   --bg-neutral: oklch(0.958796 0.008588 247.915);
+
+  --header-link-hover: inherit;
+
+  --badge-bg: var(--primary);
+  --badge-text: oklch(1 0 0);
 }
 
 html.dark {
   --primary: oklch(0.747039 0.158278 39.947);
   --text-dark: oklch(0.22 0.019 237.69);
-  --badge-bg: oklch(0.747039 0.158278 39.947);
-  --badge-text: oklch(0.22 0.019 237.69);
-  --bg-neutral: oklch(0.7 0.019 237.69);
+  --text-content-dark: oklch(0.773835 0.043586 245.097);
+  --text-base-content: var(--text-content-dark);
+  --bg-neutral: var(--text-dark);
+
+  --header-link-hover: oklch(0.7 0.019 237.69);
+
+  --badge-bg: var(--primary);
+  --badge-text: var(--text-dark);
 }
